@@ -4,6 +4,8 @@
    Pekka Savola <pekkas@netcore.fi>
  - (djm) Try to drop supplemental groups at daemon startup. Patch from 
    RedHat
+ - (bal) Back all the way out of auth-passwd.c changes.  Breaks too many
+   things that don't set pw->pw_passwd.
 
 20020509
  - (tim) [Makefile.in] Unbreak make -f Makefile.in distprep
@@ -555,4 +557,4 @@
  - (stevesk) entropy.c: typo in debug message
  - (djm) ssh-keygen -i needs seeded RNG; report from markus@
 
-$Id: ChangeLog,v 1.2102 2002/05/10 02:20:24 djm Exp $
+$Id: ChangeLog,v 1.2103 2002/05/10 02:40:15 mouring Exp $
